--- a/gfarm_v2/trunk/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "18 1月 2012" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "20 1月 2012" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -838,7 +838,7 @@ Here is an example:
 	file_trace enable
 .fi
 .TP
-\fBdebug_command \fIstring_list\fB\fR
+\fBdebug_command \fIcommand_line\fB\fR
 When a Gfarm application program crashes (received SIGSEGV, SIGBUG, etc.),
 a debug command specified in this directive is executed.
 For example,
