--- a/gfarm_v2/branches/2.5/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/branches/2.5/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1194,6 +1194,30 @@ This directive is available in both gfarm2.conf and gfmd.conf.
 </varlistentry>
 
 <varlistentry>
+<term><token>debug_command</token> <parameter>command_line</parameter></term>
+<listitem>
+<para>
+When a Gfarm application program crashes (received SIGSEGV, SIGBUG, etc.),
+a debug command specified in this directive is executed.
+For example,
+</para>
+<literallayout>
+	debug_command env DISPLAY=:0.0 xterm -e gdb %e %p
+</literallayout>
+<para>
+"%e" and "%p" are expanded to an actual program name and a process ID,
+respectively.
+If you'd like to use "%" character itself in the command line,
+type "%%".
+</para>
+<para>
+This directive is available in both gfarm2.conf and gfmd.conf.
+If this directive is omitted, no debug command is executed.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><token>no_file_system_node_timeout</token> <parameter>seconds</parameter></term>
 <listitem>
 <para>If there is no file system node available,
@@ -1494,6 +1518,7 @@ notation.</para>
 		&nbsp;&nbsp;&lt;log_message_verbose_level_statement&gt; |
 		&nbsp;&nbsp;&lt;log_auth_verbose_statement&gt; |
 		&nbsp;&nbsp;&lt;file_trace_statement&gt; |
+		&nbsp;&nbsp;&lt;debug_command_statement&gt; |
 <!--		&nbsp;&nbsp;&lt;record_atime_statement&gt; | -->
 		&nbsp;&nbsp;&lt;client_file_bufsize_statement&gt; |
 		&nbsp;&nbsp;&lt;profile_statement&gt; |
@@ -1589,6 +1614,7 @@ notation.</para>
 	&lt;log_message_verbose_level_statement&gt; ::= "log_message_verbose_level" &lt;number&gt;
 	&lt;log_auth_verbose_statement&gt; ::= "log_auth_verbose" &lt;validity&gt;
 	&lt;file_trace_statement&gt; ::= "file_trace" &lt;validity&gt;
+	&lt;debug_command_statement&gt; ::= "debug_command" &lt;string_list&gt;
 	&lt;no_file_system_node_timeout_statement&gt; ::= "no_file_system_node_timeout" &lt;number&gt;
 	&lt;gfmd_reconnection_timeout_statement&gt; ::= "gfmd_reconnection_timeout" &lt;number&gt;
 <!--	&lt;record_atime_statement&gt; ::= "record_atime" &lt;validity&gt; -->
@@ -1606,6 +1632,9 @@ notation.</para>
 	&lt;metadb_journal_dir_statement&gt; ::= "metadb_journal_dir" &lt;pathname&gt;
 	&lt;metadb_journal_max_size_statement&gt; ::= "metadb_journal_max_size" &lt;number&gt;
 	&lt;metadb_journal_recvq_size_statement&gt; ::= "metadb_journal_recvq_size" &lt;number&gt;
+	&lt;string_list&gt; ::= 
+		&nbsp;&nbsp;&lt;string&gt; |
+		&nbsp;&nbsp;&lt;string&gt; &lt;string_list&gt;
 	&lt;hostspec&gt; ::= &lt;ipv4_address&gt; | &lt;ipv4_address&gt; "/" &lt;address_mask&gt; |
 		&nbsp;&nbsp;&lt;hostname&gt; | "." &lt;domain_name&gt; | "*"
 	&lt;pathname&gt; ::= &lt;pathname_character&gt; &lt;pathname_character&gt;*
