use LANG=C instead of LANG=ja_JP.eucJP to generate manual pages without EUC Japanese, pointed out by Takuya Ishibashi-san (takuya-i@)

--- a/gfarm_v2/trunk/man/ja/man1/gfhost.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFHOST" "1" "16 6æœˆ 2011" "Gfarm" ""
+.TH "GFHOST" "1" "31 January 2012" "Gfarm" ""
 
 .SH NAME
 gfhost \- gfarm ¥Û¥¹¥È´ÉÍý¥³¥Þ¥ó¥É
