--- a/gfarm_v2/branches/2.5/man/man1/gfhost.1
+++ b/gfarm_v2/branches/2.5/man/man1/gfhost.1
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFHOST" "1" "16 6月 2011" "Gfarm" ""
+.TH "GFHOST" "1" "31 January 2012" "Gfarm" ""
 
 .SH NAME
 gfhost \- Gfarm host maintenance command
@@ -55,7 +55,7 @@ by the -a or -D option.
 By default, hosts are displayed in alphabetical order, but you can
 change this by the -L, -p, or -r options. Although the -L option is ignored
 in the -M function  and in the default function.
-\&.
+.
 .PP
 The following is a list of the functions of the \fBgfhost\fR
 command. You shouldn't specify more than one functions at a time.
