--- a/gfarm_v2/branches/2.5/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.5/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "20 1月 2012" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "31 January 2012" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -847,7 +847,7 @@ For example,
 	debug_command env DISPLAY=:0.0 xterm -e gdb %e %p
 .fi
 
-"%e" and "%p" are expaned to an actual program name and a process ID,
+"%e" and "%p" are expanded to an actual program name and a process ID,
 respectively.
 If you'd like to use "%" character itself in the command line,
 type "%%".
