--- a/gfarm_samba/trunk/README
+++ b/gfarm_samba/trunk/README
@@ -1,22 +1,21 @@
 Gfarm Samba VFS module v0.0.1
 --------------------
 
-
 INSTALL
 
-Before building this vfs module, you need to get source code of samba and install
-gfarm-devel package or put the gfarm source code to include directory.
+Before building this vfs module, you need to get source code of samba
+and install gfarm-devel package or put the gfarm source code to
+include directory.
 
 - Preparing samba header files
 Move to samba source code directory and run "configure.developer" script.
 Then, type "make."  "make install" is not necessary at this time.
 -----
-$cd samba-3.x.x/source		# SAMBA_SOURCE_DIRECTORY
+$cd samba-3.x.x/source3		# SAMBA_SOURCE_DIRECTORY
 $ ./configure.developer
 $ su 
 # make
 -----
-
 
 - Compile the Gfarm Samba VFS Module
 Execute following commands in the Samba VFS Module directory.
