--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "31 January 2012" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "29 February 2012" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm設定ファイル
@@ -912,6 +912,20 @@ enable のとき、デフォルトのマスターgfmdとして設定されている場合でも、スレーブgfm
 	metadb_server_force_slave enable
 .fi
 .TP
+\fBmetadb_server_slave_listen \fI有効性\fB\fR
+enable のとき、スレーブgfmdとして設定されている場合でも、クライアントからの要求を受け付けます。
+デフォルトはdisableです。
+
+注意: この機能は開発用に用意されていますので、通常の用途では設定しないでください。
+
+この文はgfmd.confのみで有効です。
+
+例:
+
+.nf
+	metadb_server_slave_listen enable
+.fi
+.TP
 \fBmetadb_server_slave_max_size \fIノード数\fB\fR
 スレーブgfmdの最大ノード数を指定します。デフォルトは16です。
 
@@ -1024,6 +1038,7 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 		\~\~<synchronous_replication_timeout_statement> |
 		\~\~<synchronous_journaling_statement> |
 		\~\~<metadb_server_force_slave_statement> |
+		\~\~<metadb_server_slave_listen_statement> |
 		\~\~<metadb_server_slave_max_size_statement> |
 		\~\~<metadb_journal_dir_statement> |
 		\~\~<metadb_journal_max_size_statement> |
@@ -1111,6 +1126,7 @@ gfarm2.confの文法をBNFで記述すると、下記のようになります。
 	<synchronous_replication_timeout_statement> ::= "synchronous_replication_timeout" <number>
 	<synchronous_journaling_statement> ::= "synchronous_journaling" <validity>
 	<metadb_server_force_slave_statement> ::= "metadb_server_force_slave" <validity>
+	<metadb_server_slave_listen_statement> ::= "metadb_server_slave_listen" <validity>
 	<metadb_server_slave_max_size_statement> ::= "metadb_server_slave_max_size" <number>
 	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
 	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
