--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfstress.rb.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfstress.rb.1.docbook
@@ -28,6 +28,7 @@
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para>This comannd executes gfperf-metadata, gfperf-tree, gfperf-read, gfperf-write, gfperf-replica in parallel to make gfarm system high load average.
 gfperf-read, gfperf-write, gfperf-replica are executed for each gfsd servers.
+</para>
 <para>
 This command runs until an error occured. If you need to stop, press Ctrl-C or send TERM signal. 
 </para>
